# cppEdit

./: .gitignore  CMakeLists.txt  README.md
assets/: Video.mov  Video.original.mov
src/: app.cpp  app.h  editor.cpp  editor.h  icons.cpp  icons.h  input.cpp  input.h  main.cpp  nk_common.h  search.cpp  shortcuts.cpp  shortcuts.h  sidebar.cpp  sidebar.h  theme.h
